--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
             </div>
           </div>
           <p class="extra-text">
-            متاح للعمل في فترات مختلفة، مع استعداد تام للانتقال داخل مصر حسب متطلبات العمل،
+            متاح للعمل في فترات مختلفة، مع استعداد تام للانتقال خارج مصر حسب متطلبات العمل،
             والمشاركة في فرق تشغيل أو متابعة ميدانية داخل المواقع أو المؤسسات المختلفة.
           </p>
         </div>
